--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet"href="style/style.css">
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
     <div class="main">
 
-
-    <div class="child1
-    <img src="pic/smile.jpg" alt="profile"><br>
+    <div class="child1">
+    <img src="pic/baby.jpg" alt="profile"><br>
     <h2>renu</h2><hr>
-    <a href="mailto:gmkrenuka534@gmail.com">gmkrenuka534@gmail.com
+    <a href="mailto:gmkrenuka534@gmail.com">gmkrenuka534@gmail.com</a>
 
     </div>
 
-
-
-      <div class="child2">
-
-      </div>
+    <div class="renuka" id="renuka">
+<h2>eduction qualification</h2>
     </div>
-
+  <script type="text/javascript" src="main.js">
+</script>
+</div>
   </body>
 </html>
