--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <div class="child1">
     <img src="pic/baby.jpg" alt="profile"><br>
-    <h2>renu</h2><hr>
+    <h2>renu</h2>
+    <h3>(Full-stack Developer)</h3>
     <a href="mailto:gmkrenuka534@gmail.com">gmkrenuka534@gmail.com</a>
-
+    <p>Mangalagiri, Andhra Pradesh</p>
     </div>
 
     <div class="renuka" id="renuka">
-<h2>eduction qualification</h2>
+
     </div>
   <script type="text/javascript" src="main.js">
 </script>
